fixed header overflow

--- a/src/Components/pages/Users Page/Users.css
+++ b/src/Components/pages/Users Page/Users.css
@@ -139,12 +139,13 @@ body {
 /* header */
 
 .header {
-  position: relative;
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 16px;
   margin-bottom: 32px;
+  top: 0;
   z-index: 100;
 }
 
